--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pace JS | Preloader</title>
-    <link rel="stylesheet" href="style.css">
+    <title>cryptomori challenge</title>
+    <link rel="stylesheet" href="/style/style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="pace.js"></script>
+    <script src="/script/pace.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-bez@1.0.11/src/jquery.bez.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 </head>
@@ -42,7 +42,7 @@
       </script>
       <div class="banner">
           <video autoplay muted loop>
-              <source src="crypto.mp4" type="">
+              <source src="/video/crypto.mp4" type="">
           </video>
       </div>
 </body>
