--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html lang="en">
 <head>
+    <script type="text/javascript">
+<!--
+if (screen.width <= 699) {
+document.location = "m.cryptomori.cf";
+}
+//-->
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
